#1517 removed java 11 dependencies