@@ -40,7 +40,7 @@ public class MavenSettingsTest {
 
     String content;
     try {
-      content = Files.readString(Paths.get(testdataRoot).resolve("settings.xml"));
+      content = new String(Files.readAllBytes(Paths.get(testdataRoot).resolve("settings.xml")));
     } catch (IOException e) {
       throw new CobiGenRuntimeException("Unable to read test settings.xml", e);
     }
